[package]
name = "memory"
version = "0.1.0"
authors = ["Oliver With <oliverwith@bbv.ch>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
slint = "1.5"

[build-dependencies]
slint-build = "1.5"
