[package]
name = "decision_maker"
version = "0.1.0"
authors = ["Oliver With <oliverwith@bbv.ch>"]
edition = "2021"
build = "build.rs"


[dependencies]
rand = "0.8"
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
opt-level = "s"     # Optimize for size
lto = "thin"        # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to improve LTO
panic = "unwind"
strip = "debuginfo"
